--- a/CamMasterAutomationLibrary/CamMasterComTest/CamMasterComTest.vbproj
+++ b/CamMasterAutomationLibrary/CamMasterComTest/CamMasterComTest.vbproj
@@ -63,6 +63,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Security" />
@@ -128,6 +131,7 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="packages.config" />
     <None Include="VP_CAMMaster_Licensing_Guide.pdf" />
   </ItemGroup>
   <ItemGroup>
